--- a/external/opal-prd/Makefile
+++ b/external/opal-prd/Makefile
@@ -1,18 +1,21 @@
 CC = $(CROSS_COMPILE)gcc
 
-CFLAGS = -O0 -Werror -Wall -ggdb
+CFLAGS = -m64 -Werror -Wall -g2 -ggdb
+LDFLAGS = -m64
+ASFLAGS = -m64
 CPPFLAGS = -I. -I../../include
 
 ifdef KERNEL_DIR
 CPPFLAGS += -I$(KERNEL_DIR)/arch/powerpc/include
 endif
 
+# Use make V=1 for a verbose build.
+ifndef V
+        Q_CC=	@echo '    CC ' $@;
+        Q_LINK=	@echo '  LINK ' $@;
+endif
+
 OBJS = opal-prd.o thunk.o
-
-opal-prd: $(OBJS)
-	$(LINK.o) -o $@ $^
-
-all: opal-prd
 
 .PHONY: links
 links:
@@ -20,8 +23,19 @@ links:
 
 $(OBJS): links
 
+all: opal-prd
+
+%.o: %.c
+	$(Q_CC)$(COMPILE.c) $< -o $@
+
+%.o: %.S
+	$(Q_CC)$(COMPILE.S) $< -o $@
+
+opal-prd: $(OBJS)
+	$(Q_LINK)$(LINK.o) -o $@ $^
+
 clean:
-	rm -f *.[odsa] opal-prd
+	$(RM) *.[odsa] opal-prd
 
 distclean: clean
-	rm -f *~
+	$(RM) -f *~
