external/opal-prd: Add handle_attns loop
Add out main loop, to call hservices's enable_attns, and handle_attns in
response to any incoming TYPE_ATTN messages.

Signed-off-by: Jeremy Kerr <jk@ozlabs.org>

--- a/external/opal-prd/Makefile
+++ b/external/opal-prd/Makefile
@@ -1,16 +1,24 @@
 CC = $(CROSS_COMPILE)gcc
 
 CFLAGS = -O0 -Werror -Wall -ggdb
-CPPFLAGS = -I.
+CPPFLAGS = -I. -I../../include
 
 ifdef KERNEL_DIR
 CPPFLAGS += -I$(KERNEL_DIR)/arch/powerpc/include
 endif
 
-opal-prd: opal-prd.o thunk.o
+OBJS = opal-prd.o thunk.o
+
+opal-prd: $(OBJS)
 	$(LINK.o) -o $@ $^
 
 all: opal-prd
+
+.PHONY: links
+links:
+	ln -sf ../../ccan .
+
+$(OBJS): links
 
 clean:
 	rm -f *.[odsa] opal-prd
