external/opal-prd: Implement PNOR callbacks
The PNOR read and write calls are implemented by accessing the PNOR
through a mtd device.

The mtd device exposes the entire pnor, however the callback operates on
named partitions. Therefore we use libffs from libflash in the skiboot
tree to parse the partitions and find where to read and write.

Signed-off-by: Joel Stanley <joel@jms.id.au>

Conflicts:
	external/opal-prd/Makefile
	external/opal-prd/opal-prd.c

--- a/external/opal-prd/Makefile
+++ b/external/opal-prd/Makefile
@@ -15,15 +15,18 @@ ifndef V
         Q_LINK=	@echo '  LINK ' $@;
 endif
 
-OBJS = opal-prd.o thunk.o
+OBJS = opal-prd.o thunk.o pnor.o libflash/libffs.o libflash/libflash.o
+
+all: opal-prd
 
 .PHONY: links
 links:
 	ln -sf ../../ccan .
+	mkdir -p libflash
+	ln -sfr ../../libflash/*.h libflash/
+	ln -sfr ../../libflash/*.c libflash/
 
 $(OBJS): links
-
-all: opal-prd
 
 %.o: %.c
 	$(Q_CC)$(COMPILE.c) $< -o $@
@@ -38,4 +41,4 @@ clean:
 	$(RM) *.[odsa] opal-prd
 
 distclean: clean
-	$(RM) -f *~
+	$(RM) -f *~ ccan libflash
