external/opal-prd: Add test for pnor image
A simple check that an image can be opened and parsed.

 make test
 ./test/test_pnor /path/to/pnor

Signed-off-by: Joel Stanley <joel@jms.id.au>

--- a/external/opal-prd/Makefile
+++ b/external/opal-prd/Makefile
@@ -37,8 +37,14 @@ $(OBJS): links
 opal-prd: $(OBJS)
 	$(Q_LINK)$(LINK.o) -o $@ $^
 
+test: test/test_pnor
+
+test/test_pnor: test/test_pnor.o pnor.o libflash/libflash.o libflash/libffs.o
+	$(Q_LINK)$(LINK.o) -o $@ $^
+
 clean:
 	$(RM) *.[odsa] opal-prd
+	$(RM) test/*.[odsa] test/test_pnor
 
 distclean: clean
 	$(RM) -f *~ ccan libflash
