opal-prd: Makefile tweaks
Make links a bit more quiet, fix cleans...

Signed-off-by: Benjamin Herrenschmidt <benh@kernel.crashing.org>

--- a/external/opal-prd/Makefile
+++ b/external/opal-prd/Makefile
@@ -13,6 +13,7 @@ endif
 ifndef V
         Q_CC=	@echo '    CC ' $@;
         Q_LINK=	@echo '  LINK ' $@;
+        Q_LN=   @echo '    LN ' $@;
 endif
 
 OBJS = opal-prd.o thunk.o pnor.o libflash/libffs.o libflash/libflash.o
@@ -21,10 +22,10 @@ all: opal-prd
 
 .PHONY: links
 links:
-	ln -sf ../../ccan .
 	mkdir -p libflash
-	ln -sfr ../../libflash/*.h libflash/
-	ln -sfr ../../libflash/*.c libflash/
+	$(Q_LN)ln -sfr ../../libflash/*.h libflash/
+	$(Q_LN)ln -sfr ../../libflash/*.c libflash/
+	$(Q_LN)ln -sf ../../ccan .
 
 $(OBJS): links
 
@@ -43,8 +44,9 @@ test/test_pnor: test/test_pnor.o pnor.o libflash/libflash.o libflash/libffs.o
 	$(Q_LINK)$(LINK.o) -o $@ $^
 
 clean:
-	$(RM) *.[odsa] opal-prd
+	$(RM) *.[odsa] libflash/*.[odsa] opal-prd
 	$(RM) test/*.[odsa] test/test_pnor
 
 distclean: clean
-	$(RM) -f *~ ccan libflash
+	$(RM) -f *~ ccan
+	$(RM) -rf libflash
